Fix(eos_designs): Fix context vars for custom interface description templates

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/custom_templates/interface_descriptions/mlag/port-channel-interfaces.j2
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/custom_templates/interface_descriptions/mlag/port-channel-interfaces.j2
@@ -1,1 +1,1 @@
-{{ description_prefix }}_MLAG_PEER_{{ switch.mlag_peer }}_Po{{ switch.mlag_interfaces[0] | regex_findall("\d") | join }}
+{{ description_prefix }}_MLAG_PEER_{{ mlag_peer }}_Po{{ mlag_interfaces[0] | regex_findall("\d") | join }}
