--- a/ansible_collections/arista/avd/roles/eos_designs/templates/interface_descriptions/mlag/port-channel-interfaces.j2
+++ b/ansible_collections/arista/avd/roles/eos_designs/templates/interface_descriptions/mlag/port-channel-interfaces.j2
@@ -3,4 +3,4 @@
  Use of this source code is governed by the Apache License 2.0
  that can be found in the LICENSE file.
 #}
-MLAG_PEER_{{ switch.mlag_peer }}_Po{{ switch.mlag_port_channel_id }}
+MLAG_PEER_{{ mlag_peer }}_Po{{ mlag_port_channel_id }}
