--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/router-bgp.j2
@@ -952,6 +952,9 @@ router bgp {{ router_bgp.as }}
 {%     if router_bgp.address_family_ipv4_multicast is arista.avd.defined %}
    !
    address-family ipv4 multicast
+{%         if router_bgp.address_family_ipv4_multicast.bgp.additional_paths.receive is arista.avd.defined(true) %}
+      bgp additional-paths receive
+{%         endif %}
 {%         for peer_group in router_bgp.address_family_ipv4_multicast.peer_groups | arista.avd.natural_sort('name') %}
 {%             if peer_group.route_map_in is arista.avd.defined %}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_in }} in
@@ -976,6 +979,9 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} activate
 {%             elif neighbor.activate is arista.avd.defined(false) %}
       no neighbor {{ neighbor.ip_address }} activate
+{%             endif %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} additional-paths receive
 {%             endif %}
 {%         endfor %}
 {%         for redistribute_route in router_bgp.address_family_ipv4_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
@@ -1269,7 +1275,7 @@ router bgp {{ router_bgp.as }}
 {%             set ps_add_path = 'bgp additional-paths send' %}
 {%             if router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit is arista.avd.defined and router_bgp.address_family_path_selection.bgp.additional_paths.send == 'ecmp' %}
 {%                 set ps_add_path = ps_add_path ~ ' ecmp limit ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send_ecmp_limit %}
-{%             elif router_bgp.address_family_path_selection.bgp.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_path_selection.bgp.additional_paths.send | arista.avd.default == 'limit' %}
+{%             elif router_bgp.address_family_path_selection.bgp.additional_paths.send_limit is arista.avd.defined and router_bgp.address_family_path_selection.bgp.additional_paths.send == 'limit' %}
 {%                 set ps_add_path = ps_add_path ~ ' send limit ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send_limit %}
 {%             else %}
 {%                 set ps_add_path = ps_add_path ~ ' ' ~ router_bgp.address_family_path_selection.bgp.additional_paths.send %}
@@ -1287,9 +1293,9 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%             if peer_group.additional_paths.send is arista.avd.defined %}
 {%                 set ps_pg_add_path = 'neighbor ' ~ peer_group.name ~ ' additional-paths send' %}
-{%                 if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined and peer_group.additional_paths.send | arista.avd.default == 'ecmp' %}
+{%                 if peer_group.additional_paths.send_ecmp_limit is arista.avd.defined and peer_group.additional_paths.send == 'ecmp' %}
 {%                     set ps_pg_add_path = ps_pg_add_path ~ ' ecmp limit ' ~ peer_group.additional_paths.send_ecmp_limit %}
-{%                 elif peer_group.additional_paths.send_limit is arista.avd.defined and peer_group.additional_paths.send | arista.avd.default == 'limit' %}
+{%                 elif peer_group.additional_paths.send_limit is arista.avd.defined and peer_group.additional_paths.send == 'limit' %}
 {%                     set ps_pg_add_path = ps_pg_add_path ~ ' limit ' ~ peer_group.additional_paths.send_limit %}
 {%                 else %}
 {%                     set ps_pg_add_path = ps_pg_add_path ~ ' ' ~ peer_group.additional_paths.send %}
@@ -1308,7 +1314,7 @@ router bgp {{ router_bgp.as }}
 {%             endif %}
 {%             if neighbor.additional_paths.send is arista.avd.defined %}
 {%                 set ps_neighbor_add_path = 'neighbor ' ~ neighbor.ip_address ~ ' additional-paths send' %}
-{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send | arista.avd.default == 'ecmp' %}
+{%                 if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
 {%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' ecmp limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
 {%                 elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
 {%                     set ps_neighbor_add_path = ps_neighbor_add_path ~ ' limit ' ~ neighbor.additional_paths.send_limit %}
@@ -1814,9 +1820,6 @@ router bgp {{ router_bgp.as }}
 {%                 else %}
 {%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.send %}
 {%                 endif %}
-{%                 if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined %}
-{%                     set ipv4_add_path = ipv4_add_path ~ ' ' ~ vrf.address_family_ipv4.bgp.additional_paths.prefix_list %}
-{%                 endif %}
          {{ ipv4_add_path }}
 {%             endif %}
 {%             for neighbor in vrf.address_family_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1840,6 +1843,23 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if neighbor.prefix_list_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_out }} out
+{%                 endif %}
+{%                 if neighbor.additional_paths.receive is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} additional-paths receive
+{%                 endif %}
+{%                 if neighbor.additional_paths.send is arista.avd.defined %}
+{%                     set vrf_ipv4_add_path = "neighbor " ~ neighbor.ip_address ~ " additional-paths send" %}
+{%                     if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' ecmp limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                     elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' send limit ' ~ neighbor.additional_paths.send_limit %}
+{%                     else %}
+{%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' ' ~ neighbor.additional_paths.send %}
+{%                     endif %}
+{%                     if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined %}
+{%                         set vrf_ipv4_add_path = vrf_ipv4_add_path ~ ' ' ~ neighbor.additional_paths.prefix_list %}
+{%                     endif %}
+         {{ vrf_ipv4_add_path }}
 {%                 endif %}
 {%                 if neighbor.next_hop.address_family_ipv6.enabled is arista.avd.defined %}
 {%                     if neighbor.next_hop.address_family_ipv6.enabled is arista.avd.defined(true) %}
@@ -1910,6 +1930,23 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if neighbor.route_map_out is arista.avd.defined %}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
+{%                 endif %}
+{%                 if neighbor.additional_paths.receive is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} additional-paths receive
+{%                 endif %}
+{%                 if neighbor.additional_paths.send is arista.avd.defined %}
+{%                     set vrf_ipv6mc_add_path = "neighbor " ~ neighbor.ip_address ~ " additional-paths send" %}
+{%                     if neighbor.additional_paths.send_ecmp_limit is arista.avd.defined and neighbor.additional_paths.send == 'ecmp' %}
+{%                         set vrf_ipv6mc_add_path = vrf_ipv6mc_add_path ~ ' ecmp limit ' ~ neighbor.additional_paths.send_ecmp_limit %}
+{%                     elif neighbor.additional_paths.send_limit is arista.avd.defined and neighbor.additional_paths.send == 'limit' %}
+{%                         set vrf_ipv6mc_add_path = vrf_ipv6mc_add_path ~ ' send limit ' ~ neighbor.additional_paths.send_limit %}
+{%                     else %}
+{%                         set vrf_ipv6mc_add_path = vrf_ipv6mc_add_path ~ ' ' ~ neighbor.additional_paths.send %}
+{%                     endif %}
+{%                     if vrf.address_family_ipv4.bgp.additional_paths.prefix_list is arista.avd.defined %}
+{%                         set vrf_ipv6mc_add_path = vrf_ipv6mc_add_path ~ ' ' ~ neighbor.additional_paths.prefix_list %}
+{%                     endif %}
+         {{ vrf_ipv6mc_add_path }}
 {%                 endif %}
 {%             endfor %}
 {%             for network in vrf.address_family_ipv4_multicast.networks | arista.avd.natural_sort('prefix') %}
@@ -2054,6 +2091,9 @@ router bgp {{ router_bgp.as }}
          neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%                 endif %}
 {%             endfor %}
+{%             if neighbor.additional_paths.receive is arista.avd.defined %}
+         neighbor {{ neighbor.ip_address }} additional-paths receive
+{%             endif %}
 {%             for network in vrf.address_family_ipv6_multicast.networks | arista.avd.natural_sort('prefix') %}
 {%                 set network_cli = "network " ~ network.prefix %}
 {%                 if network.route_map is arista.avd.defined %}
