Feat(eos_cli_config_gen): add management_ssh authentication settings (protocol and empty-passwords)

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/management-ssh.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/management-ssh.j2
@@ -30,11 +30,17 @@ management ssh
 {%     if management_ssh.idle_timeout is arista.avd.defined %}
    idle-timeout {{ management_ssh.idle_timeout }}
 {%     endif %}
+{%     if management_ssh.authentication is arista.avd.defined and management_ssh.authentication.protocol is arista.avd.defined  %}
+   authentication protocol {{ management_ssh.authentication.protocol | join(" ") }}
+{%     endif %}
 {%     if management_ssh.connection.limit is arista.avd.defined %}
    connection limit {{ management_ssh.connection.limit }}
 {%     endif %}
 {%     if management_ssh.connection.per_host is arista.avd.defined %}
    connection per-host {{ management_ssh.connection.per_host }}
+{%     endif %}
+{%     if management_ssh.authentication is arista.avd.defined and management_ssh.authentication.empty_passwords is arista.avd.defined  %}
+   authentication empty-passwords {{ management_ssh.authentication.empty_passwords }}
 {%     endif %}
 {%     if management_ssh.client_alive.interval is arista.avd.defined %}
    client-alive interval {{ management_ssh.client_alive.interval }}
