--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
@@ -7,6 +7,25 @@
 {% if management_ssh is arista.avd.defined %}
 
 ### Management SSH
+{%     if management_ssh.authentication is arista.avd.defined %}
+
+#### Authentication Settings
+
+| Authentication protocols | Empty passwords |
+| ------------ | -------------- |
+{%         if management_ssh.authentication.protocol is arista.avd.defined  %}
+{%             set protocol = management_ssh.authentication.protocol | join(",") %}
+{%         else %}
+{%             set protocol = 'keyboard-interactive public-key' %}
+{%         endif %}
+{%         if management_ssh.authentication.empty_passwords is arista.avd.defined  %}
+{%             set empty_passwords = management_ssh.authentication.empty_passwords %}
+{%         else %}
+{%             set empty_passwords = 'auto' %}
+{%         endif %}
+| {{ protocol }} | {{ empty_passwords }} |
+
+{%    endif %}
 {%     if management_ssh.access_groups is arista.avd.defined %}
 
 #### IPv4 ACL
