--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/management-ssh.j2
@@ -16,11 +16,11 @@
 {%         if management_ssh.authentication.protocols is arista.avd.defined  %}
 {%             set protocols = management_ssh.authentication.protocols | join(", ") %}
 {%         else %}
-{%             set protocols = 'keyboard-interactive public-key' %}
+{%             set protocols = 'keyboard-interactive, public-key' %}
 {%         endif %}
 {%         set empty_passwords = management_ssh.authentication.empty_passwords | arista.avd.default('auto') %}
 | {{ protocols }} | {{ empty_passwords }} |
-{%    endif %}
+{%     endif %}
 {%     if management_ssh.access_groups is arista.avd.defined %}
 
 #### IPv4 ACL
